[package]
name = "koine"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>", "MikeCamel <mike@p2ptrust.org"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sev = { git = "https://github.com/connorkuehl/sev", branch = "serdles-all-the-way-down" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros", "sync"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
ciborium = "0.1"
strum = { version = "0.19", features = ["derive"] }
hyper = "0.13"
warp = { version = "0.2", features = ["tls"] }
http = "0.2"
openssl = "0.10.32"
