[package]
name = "koine"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>", "MikeCamel <mike@p2ptrust.org"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sev = { git = "https://github.com/enarx/sev" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
